Se agrego bootstrap con npm

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     
 </head>
 <body>
-    
+    <!-- <h1>Tamma</h1> -->
+    <header>
+        <nav class="navBar">
+            <h3>NavBar</h3>
+        </nav>
+    </header>
+    <script src="./app.js"></script>
 </body>
 </html>
