--- a/index.html
+++ b/index.html
@@ -6,42 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto3</title>
     <link rel="stylesheet" href="./styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <script src="node_modules/chart.js/dist/chart.min.js"></script>
 </head>
 <body>
-    <div class="card text-center">
-        <div class="card-header">
-          <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="true" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+  <nav class="navbar navbar-expand-lg" style="background-color: #EFEFFB;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Disney</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Idioma
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
+    </div>
+  </nav>
+   
+  <div class="card m-0 bg-dark text-white">
+    <img src="./assets/images/architecture-gebc879b2b_1920.jpg"  class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title text-xxl-center display-1 position-relative top-40 start-30" style="color:#4B088A ;">Disneyapi.dev</h5>
+      <p class="card-text text-center" style="color: #9A2EFE;">"Gracias por ésta aventura, ¡ahora te toca a ti vivir una nueva"</p>
+    </div>
+  </div>
+
+
+
+<div class="card" style="width: 18rem;">
+  <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <canvas id="myChart" width="400" height="400"></canvas>
+  <div class="card-body">
+    <h5 id="nombrePersonaje" class="card-title">Card title</h5>
+    <p id="informacionPersonaje" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+
+<script>
+  
+  </script>
 
 <footer>
     <div class="card">
-        <h5 class="card-header">Featured</h5>
+        <h5 class="card-header text-center">Made with love by RebeccaAlMe</h5>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title text-center">FaceBook | Instagram | LinkedIn | YouTube</h5>
+          <p class="card-text text-center">Real.Cadeaux 2022</p>
         </div>
       </div>
 </footer>
 
 <script src="./app.js"></script>
+
 </body>
 </html>
