Se unieron los datos de la api para lograr graficar el personaje deseado

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="card m-0 bg-dark text-white">
     <img src="./assets/images/architecture-gebc879b2b_1920.jpg"  class="card-img" alt="...">
     <div class="card-img-overlay">
-      <h5 class="card-title text-xxl-center display-1 position-relative top-40 start-30" style="color:#4B088A ;">Disneyapi.dev</h5>
+      <h5 class="card-title text-center display-1 position-relative top-40 start-30" style="color:#4B088A ;">Disneyapi.dev</h5>
       <p class="card-text text-center" style="color: #9A2EFE;">"Gracias por ésta aventura, ¡ahora te toca a ti vivir una nueva"</p>
     </div>
   </div>
@@ -56,7 +56,8 @@
     <canvas id="myChart" width="400" height="400"></canvas>
   <div class="card-body">
     <h5 id="nombrePersonaje" class="card-title">Card title</h5>
-    <p id="informacionPersonaje" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <!-- <p id="informacionPersonaje" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+    <img height="250px" width="250px" id="imagenPersonaje" src="" alt="imagenDelPersonaje">
   </div>
 </div>
 
