--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Proyecto3</title>
     <link rel="stylesheet" href="./styles.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <script src="node_modules/chart.js/dist/chart.min.js"></script>
+    <script src="./node_modules/chart.js/dist/chart.min.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg" style="background-color: #EFEFFB;">
